src/log/combined-all.metagpu5.3422239.err
  File "main.py", line 88
    print(f"Best run id:{best_run}, \n Config:{best_config}")
                                                           ^
SyntaxError: invalid syntax
